Agregadas nuevas clases
+Agregado la clase Chef
+Agregado la clase tipoCocina
+Agregado la clase Ingrediente
+Agregado la clase Usuario
+Agregado automatico de tipos de cocinas en el Starter
*Establecer un control de rol para agregar recetas!!!
+Ajustes varios

--- a/OBLTallerObjetos/AMCGlib/AMCGlib.csproj
+++ b/OBLTallerObjetos/AMCGlib/AMCGlib.csproj
@@ -40,8 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chef.cs" />
+    <Compile Include="Ingrediente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Receta.cs" />
+    <Compile Include="tipoCocina.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
